# workai

./: justaddfp32.rlym  main.txt  readme.md  readme_main.md  relaycreate_humdet.py
cases/helloworld_driver/: Makefile  char_device.c  test.sh  testioctl.c
cases/nms_plugin_yolov3_err/: README.md  run.sh
cases/nms_plugin_yolov3_err/nms_plugin+other_layers_from_hik/: conv100.txt  front_end.py  hktestnms_ok.rlym  nms_engin.slz  output.npy  output1.npy  output2.npy  test_plugin_op.py
cases/nms_plugin_yolov3_err/nms_plugin+other_layers_from_hik/to_hk_1115/to_hk_1115/yolov2_opt/dlnne_plugin/: CMakeLists.txt  dl_filter_sort_single_input.cc  plugin_register.cu
cases/nms_plugin_yolov3_err/nms_plugin+other_layers_from_hik/to_hk_1115/to_hk_1115/yolov2_opt/dlnne_plugin/plugin/: filter_sort_single_input.h  plugin.cc  utils.cc  utils.h
cases/nms_plugin_yolov3_err/nms_plugin+other_layers_from_hik/to_hk_1115/to_hk_1115/yolov2_opt/dlnne_plugin/plugin/kernel/: filter_sort_kernel.h
cases/nms_plugin_yolov3_err/nms_plugin_test_to_hik_random_input/: Readme  hktest.rlym  hktest1.rlym  hktestnms_ok.rlym  out_0.npy  output2.npy  outputallclose.py  run_me.sh  test_plugin_op_randominput.py
cases/nms_plugin_yolov3_err/onlynms_case/: ReadMe  nms_onnx_create_discard_filter_sort.py  nmstest.cc  runwithPlugin.sh  (+1 more)
cases/nms_plugin_yolov3_err/onlynms_case/pluginzoo/: CMakeLists.txt  README.md  build_all.sh
cases/nms_plugin_yolov3_err/onlynms_case/pluginzoo/NMS/: CMakeLists.txt  build.sh  modifiedonnx.py
cases/nms_plugin_yolov3_err/onlynms_case/pluginzoo/NMS/op_kernel/: CMakeLists.txt  dl_custom_combine_non_max_suppression_post.cc  dl_custom_csum.cc  dl_custom_nms_gather_box.cc  dl_custom_nonmaxs.cc  dl_filter_sort.cc
cases/nms_plugin_yolov3_err/onlynms_case/pluginzoo/NMS/op_kernel/plugin/: CMakeLists.txt  combine_non_max_suppression_post.h  csum.h  filter_sort.h  kernel.cc  kernel.h  non_max_suppression.h  non_max_suppression_gather_boxes.h  plugin.cc  plugin_register.cc  utils.h  utils_nms.cc
cases/nms_plugin_yolov3_err/onlynms_case/pluginzoo/NMS/tests/: dlnneEngine.py  nms-out4.onnx  test_plugin.py
cases/nms_plugin_yolov3_err/onlynms_case/pluginzoo/NMS/tvm_op/: front_end.py  plugin_register.h
cases/nms_plugin_yolov3_err/onlynms_case/pluginzoo/common/: CMakeLists.txt  utils.cc  utils.h
cases/nms_plugin_yolov3_err/sample/c++/: CMakeLists.txt
cases/nms_plugin_yolov3_err/sample/c++/app_yolov3-nms/: CMakeLists.txt  Detector.cpp  Detector.h  main.cpp  util.h
cases/nms_plugin_yolov3_err/sample/c++/dljpu/: CMakeLists.txt  dljpudecode.cpp  dljpudecode.h
cases/nms_plugin_yolov3_err/sample/c++/imageProcess/: CMakeLists.txt
cases/nms_plugin_yolov3_err/sample/c++/imageProcess/include/: image_proc.h
cases/nms_plugin_yolov3_err/sample/c++/imageProcess/src/: common.h  gray_resize.cu.cc  gray_resize.h  rgb2yuv.cu.cc  rgb_affine.cu.cc  rgb_affine.h  rgb_normalization.cu.cc  rgb_normalization.h  rgb_resize.cu.cc  rgb_resize.h  rgb_roi_resize_norm.cu.cc  rgb_roi_resize_norm.h  yuv2rgb_resize_norm.cu.cc  yuv2rgb_resize_norm.h  yuv2yuv_cvt.h  yuv_resize.cu.cc  yuv_resize.h  yuv_to_rgb.cu.cc  yuv_to_rgb.h
cases/nne_with_case/: multiply_divide_int8.rlym  run.sh
cases/nne_with_ia_case/: CMakeLists.txt
cases/nne_with_ia_case/doc/: .Doxyfile.swp
cases/nne_with_ia_case/golden/: batch_rgb_affine_roi_golden_batch1_900x540x3.rgb  full_range_yuv2rgb_resize_norm_nearest_plane_golden_960x540.rgb  gray_resize_golden_640x480_nearest.rgb  rgb2yu12_1920x1080.yuv  rgb_affine_roi_golden_bilinear_900x540x1.rgb  rgb_resize_roi_golden_bilinear_480x270.rgb  rgb_resize_roi_golden_nearest_480x270.rgb  rgb_roi_resize_norm_pad_golden_bilinear_480x480.rgb  rgb_roi_resize_norm_pad_golden_nearest_480x480.rgb  rgb_rotate_golden_540x900_rotate0.rgb  roi_nv122rgb_affine_norm_1920x1080_100x100.rgb  roi_nv122rgb_resize_quantize_bilinear_plane_960x512.rgb  roi_yuv400p2rgb_resize_norm_bilinear_plane_540x540.rgb  yu122rgb_affine_golden_1920x1080_640x480.rgb  yu12_crop_golden_960x540.yuv  yuv2bgr_resize_norm_bilinear_plane_golden_480x480.rgb  yuv2bgr_resize_norm_nearest_plane_golden_480x480.rgb  yuv2rgb_resize_norm_bilinear_plane_golden_512x512.rgb  yuv2rgb_resize_norm_nearest_plane_golden_960x540.rgb  yuv440p_to_yuv420p_1920x1080.yuv  yuv444p_to_yuv420p_1920x1080.yuv  yuv_resize_golden_176x144_i420_ddr_channel0_bilinear.yuv  yuv_resize_golden_176x144_i420_ddr_channel0_nearest.yuv  yuv_resize_golden_176x144_nv12_ddr_channel0_bilinear.yuv  yuv_resize_golden_176x144_nv21_ddr_channel0_bilinear.yuv  yuv_resize_golden_176x144_nv21_ddr_channel0_nearest.yuv  yuv_resize_golden_640x480_nv12_ddr_channel0_bilinear.yuv  yuv_resize_golden_640x480_nv21_ddr_channel0_nearest.yuv
cases/nne_with_ia_case/res/: 176x144.rgb  1920x1080_nv12.yuv  1920x1080_nv21.yuv  1920x1080_yuv422p.yuv  900x540.rgb  people_1920x1080.yuv
cases/nne_with_ia_case/src_gen1/: gray_resize.h  rgb_affine.cu.cc  rgb_affine.h  rgb_roi_resize_norm.h  rgb_rotate.cu.cc  rgb_rotate.h  yuv2rgb_resize_norm.cu.cc  yuv_crop.h  yuv_to_rgb.cu.cc  yuv_to_rgb.h
cases/nne_with_ia_case/src_gen2/: common.h  gray_resize.cu.cc  pytorch_resize_norm.h  rgb_crop.h  rgb_normalization.h  rgb_roi_resize_norm.cu.cc  rgb_roi_resize_norm.h  rgb_rotate.h  yuv2rgb_affine.h  yuv2rgb_resize_norm.cu.cc  yuv2rgb_resize_norm.h  yuv_crop.cu.cc  yuv_resize.cu.cc  yuv_resize.h  yuv_to_rgb.cu.cc  yuv_to_rgb.h
cases/nne_with_ia_case/test/: case_register.cc  case_register.h  imageProcess.py  util.cc  util.h
cases/percluster_serialize_deserialize_perf/: Makefile  justadd.onnx  justadduint8.onnx  main.cc  run.sh  test.cc
percluster_serialize_deserialize_perf/: CMakeLists.txt  Makefile  a.out  humdet.rlym  justadduint8.rlym  main.cc  run.sh  utils.h
usefulscript/: README.md  addOutputForOnnx.py  add_hk_multicase_create_json_all.py  common.py  conftest.py  justadd.py  model_test_zn.py  nne_network.py  nne_network_utils.py  onnx_extractor.py  onnxcreate.py  resnet18-v1-7.py  test_samples_onnx.py  test_simple_op.py  testzn.py  update_onnx_dims.py  znacc.py  zncheckacc.py  zncomparetwomodels.py  zntestacc.py
(+231 files in other folders)
