CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
set(SDK_DIR $ENV{DLICC_PATH}/../)


set(CMAKE_INSTALL_LIBDIR ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_INSTALL_INCLUDEDIR ${PROJECT_SOURCE_DIR}/include)
# set(CMAKE_INSTALL_INCLUDEDIR ${PROJECT_SOURCE_DIR}/common)
# ADD_SUBDIRECTORY(./common) 

# ADD_SUBDIRECTORY(./Normalize)
# ADD_SUBDIRECTORY(./DetectionOutput)
# ADD_SUBDIRECTORY(./PriorBox)
ADD_SUBDIRECTORY(./NMS)
# ADD_SUBDIRECTORY(./Upsample)
# ADD_SUBDIRECTORY(./spatial_transformer)
# ADD_SUBDIRECTORY(./DlTimes)

